TestCases/ASTTests/SemanticErrorsTests/tests/test16.c
int main() {

float f = 0.5487;
float f = 48471425.5487845145;
    return 0;

}
